@@ -26,6 +26,8 @@ import com.graphhopper.jsprit.core.problem.cost.VehicleRoutingTransportCosts;
 import com.graphhopper.jsprit.core.problem.driver.Driver;
 import com.graphhopper.jsprit.core.problem.vehicle.Vehicle;
 import com.graphhopper.jsprit.core.problem.vehicle.VehicleImpl;
+import java.util.*;
+import java.util.concurrent.ConcurrentHashMap;
 import org.matsim.api.core.v01.Id;
 import org.matsim.api.core.v01.network.Link;
 import org.matsim.api.core.v01.network.Network;
@@ -45,9 +47,6 @@ import org.matsim.utils.objectattributes.attributable.AttributesImpl;
 import org.matsim.vehicles.VehicleType;
 import org.matsim.vehicles.VehicleUtils;
 
-import java.util.*;
-import java.util.concurrent.ConcurrentHashMap;
-
 /**
  * This calculates transport-times, transport-costs and the distance to cover
  * the distance from one location to another. It calculates these values based
@@ -57,7 +56,7 @@ import java.util.concurrent.ConcurrentHashMap;
  *
  * <p>
  * It can be used with multiple threads. Note that each thread gets its own
- * leastCostPathCalculator. It is created only once and cached afterwards. Thus,
+ * leastCostPathCalculator. It is created only once and cached afterward. Thus,
  * it requires a threadSafe leastCostPathCalculatorFactory (the calculator
  * itself does not need to be thread-safe).
  *
@@ -84,8 +83,6 @@ import java.util.concurrent.ConcurrentHashMap;
  *
  */
 public class NetworkBasedTransportCosts implements VRPTransportCosts {
-
-	private final RoadPricingScheme roadPricingScheme;
 
 	public interface InternalLeastCostPathCalculatorListener {
 
@@ -497,7 +494,7 @@ public class NetworkBasedTransportCosts implements VRPTransportCosts {
 		 * </p>
 		 * Comments:
 		 * <ul>
-		 * <li>By default this will take free speed travel times.
+		 * <li>By default, this will take free speed travel times.
 		 * <li>yyyy These free speed travel times do <i>not</i> take the time-dependent
 		 * network into account. kai, jan'14
 		 * <li>Either can be changed with builder.setTravelTime(...) or with
@@ -578,7 +575,6 @@ public class NetworkBasedTransportCosts implements VRPTransportCosts {
 		this.travelTime = builder.travelTime;
 		this.network = builder.network;
 		this.leastCostPathCalculatorFactory = builder.leastCostPathCalculatorFactory;
-		this.roadPricingScheme = builder.roadPricingScheme;
 		this.timeSliceWidth = builder.timeSliceWidth;
 		this.defaultTypeId = builder.defaultTypeId;
 		this.ttMemorizedCounter = new Counter("#TransportCostValues cached ");
@@ -658,12 +654,12 @@ public class NetworkBasedTransportCosts implements VRPTransportCosts {
 
 	private void informEndCalc() {
 		for (InternalLeastCostPathCalculatorListener l : listeners)
-			l.endCalculation(Thread.currentThread().getId());
+			l.endCalculation(Thread.currentThread().threadId());
 	}
 
 	private void informStartCalc() {
 		for (InternalLeastCostPathCalculatorListener l : listeners)
-			l.startCalculation(Thread.currentThread().getId());
+			l.startCalculation(Thread.currentThread().threadId());
 	}
 
 	/**
@@ -853,11 +849,11 @@ public class NetworkBasedTransportCosts implements VRPTransportCosts {
 	}
 
 	private LeastCostPathCalculator createLeastCostPathCalculator() {
-		LeastCostPathCalculator router = routerCache.get(Thread.currentThread().getId());
+		LeastCostPathCalculator router = routerCache.get(Thread.currentThread().threadId());
 		if (router == null) {
 			LeastCostPathCalculator newRouter = leastCostPathCalculatorFactory.createPathCalculator(network,
 					travelDisutility, travelTime);
-			router = routerCache.putIfAbsent(Thread.currentThread().getId(), newRouter);
+			router = routerCache.putIfAbsent(Thread.currentThread().threadId(), newRouter);
 			if (router == null) {
 				router = newRouter;
 			}
