@@ -21,19 +21,17 @@
 
 package org.matsim.freight.carriers;
 
+import java.util.*;
+import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Disabled;
-import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.RegisterExtension;
 import org.matsim.api.core.v01.Id;
 import org.matsim.core.gbl.Gbl;
-import org.matsim.freight.carriers.*;
 import org.matsim.freight.carriers.CarrierCapabilities.FleetSize;
 import org.matsim.testcases.MatsimTestUtils;
 import org.matsim.vehicles.Vehicle;
-
-import java.util.*;
 
 public class CarrierPlanXmlReaderV2WithDtdTest  {
 
@@ -134,7 +132,7 @@ public class CarrierPlanXmlReaderV2WithDtdTest  {
 	@Disabled
 	void test_whenReadingToursOfPlan1_nuOfActivitiesIsCorrect(){
 		List<CarrierPlan> plans = new ArrayList<>(testCarrier.getPlans());
-		CarrierPlan plan1 = plans.getFirst();
+		CarrierPlan plan1 = plans.get(0);
 		ScheduledTour tour1 = plan1.getScheduledTours().iterator().next();
 		Assertions.assertEquals(5,tour1.getTour().getTourElements().size());
 	}
